--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,7 @@ book:
       chapters: 
        - Installering.qmd 
        - innlesning_data.qmd
+       - norlag.qmd
        - oversikt_datasettet.qmd
     - part: "Del 2: Deskriptive teknikker"
       chapters: 
