--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,7 @@ book:
       chapters: 
         - tidyverse.qmd
         - omkode_factor.qmd
+        - references.qmd
   appendices:
    - appendix_addins.qmd
    - import_metadata.qmd
